Added new features

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
         <div class="section-right">
             <h1>Develop our mobile apps</h1>
             <div class="border"></div>
-            <p>Trafalgar provides progressive, and affordable
-                healthcare, accessible on mobile and online
-                for everyone</p>
+            <p>Our dedicated patient engagement app and
+                web portal allow you to access information instantaneously (no tedeous form, long calls,
+                or administrative hassle) and securely</p>
             <button class="download-btn">Download
                 <img src="./assets/images/Vector (4).png" alt="" class="download-icon">
             </button>
@@ -128,6 +128,50 @@
                 informations
                 instantenously(No tedecus form, long calls, and administrative hassle) and securely"</p>
         </div>
+    </section>
+    <section class="articles">
+        <div class="article-header">
+            <h1>Check out our latest article</h1>
+            <div class="border"></div>
+        </div>
+        <div class="story-list">
+            <div class="story">
+                <div class="story-text">
+                    <img src="./assets/images/image 2.png" alt="" class="story-image">
+                    <h3 class="story-title">Disease detection, check
+                        up in the laboratory</h3>
+                    <p class="story-subtitle">In this case, the role of the health laboratory is very important to do
+                        a disease detection...</p>
+                    <a href="" class="read-more">Read More
+                        <img src="./assets/images/Vector (5).png" alt="" class="read-more-icon">
+                    </a>
+                </div>
+            </div>
+            <div class="story">
+                <div class="story-text">
+                    <img src="./assets/images/image 2 (1).png" alt="" class="story-image">
+                    <h3 class="story-title">Herbal medicines that are
+                        safe for consumption</h3>
+                    <p class="story-subtitle">Herbal medicine is very widely used at this time because of its very good for your health...</p>
+                    <a href="" class="read-more">Read More
+                        <img src="./assets/images/Vector (5).png" alt="" class="read-more-icon">
+                    </a>
+                </div>
+            </div>
+            <div class="story">
+                <div class="story-text">
+                    <img src="./assets/images/image 3.png" alt="" class="story-image">
+                    <h3 class="story-title">Natural care for healthy
+                        facial skin</h3>
+                    <p class="story-subtitle">A healthy lifestyle should start from now and also for your skin health.
+                        There are some...</p>
+                    <a href="" class="read-more">Read More
+                        <img src="./assets/images/Vector (5).png" alt="" class="read-more-icon">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <button class="view-btn">View all</button>
     </section>
 </body>
 
