--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trafalgar</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
@@ -24,6 +24,7 @@
                 <li class="nav-link">About us</li>
             </ul>
         </div>
+        <svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="50px" height="50px"><!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M0 96C0 78.33 14.33 64 32 64H416C433.7 64 448 78.33 448 96C448 113.7 433.7 128 416 128H32C14.33 128 0 113.7 0 96zM0 256C0 238.3 14.33 224 32 224H416C433.7 224 448 238.3 448 256C448 273.7 433.7 288 416 288H32C14.33 288 0 273.7 0 256zM416 448H32C14.33 448 0 433.7 0 416C0 398.3 14.33 384 32 384H416C433.7 384 448 398.3 448 416C448 433.7 433.7 448 416 448z"/></svg>
     </div>
     <section class="header-container">
         <div class="header-left">
@@ -173,6 +174,46 @@
         </div>
         <button class="view-btn">View all</button>
     </section>
+    <footer class="footer-container">
+        <div class="left-side">
+            <div class="footer-logo-section">
+                <img src="./assets/images/Logo.png" alt="" class="footer-logo">
+                <h1 class="logo-text">Trafalgar</h1>
+            </div>
+            <p class="footer-subtitle">Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online 
+                for everyone</p>
+            <p class="copyright">©Trafalgar PTY LTD 2020. All rights reserved</p>
+        </div>
+        <div class="right-side">
+        <div class="footer-navbar">
+            <h3 class="footer-header">Company</h3>
+            <ul class="nav">
+                <li class="footer-nav-link">About</li>
+                <li class="footer-nav-link">Testimonials</li>
+                <li class="footer-nav-link">Find a Doctor</li>
+                <li class="footer-nav-link">Apps</li>
+            </ul>
+        </div>
+        <div>
+            <h3 class="footer-header">Region</h3>
+            <ul class="nav">
+                <li class="footer-nav-link">Indonesia</li>
+                <li class="footer-nav-link">Singapore</li>
+                <li class="footer-nav-link">Hong Kong</li>
+                <li class="footer-nav-link">Canada</li>
+            </ul>
+        </div>
+        <div>
+            <h3 class="footer-header">Help</h3>
+            <ul class="nav">
+                <li class="footer-nav-link">Help Center</li>
+                <li class="footer-nav-link">Contact Support</li>
+                <li class="footer-nav-link">Instructions</li>
+                <li class="footer-nav-link">How it Works</li>
+            </ul>
+        </div>
+    </div>
+    </footer>
 </body>
 
 </html>
