--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="services-items firstchild">
                     <img src="./assets/images/Frame.png" alt="">
                     <h1>Search Doctor</h1>
-                    <p>Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
+                    <p class="services-item-sub">Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
                 </div>
                 <div class="services-items firstchild">
                     <img src="./assets/images/Group.png" alt="">
@@ -122,7 +122,7 @@
                 <img src="./assets/images/image 1.png" alt="" class="customer-image">
                 <div class="text-section">
                     <h3 class="customer-name">Edward Newgate</h3>
-                    <p class="customer-occcupation">Founder Circle</p>
+                    <p class="customer-occupation">Founder Circle</p>
                 </div>
             </div>
             <p class="customer-comment">"Our dedicated patient engagement app and web portal allows you to access
@@ -175,7 +175,7 @@
         <button class="view-btn">View all</button>
     </section>
     <footer class="footer-container">
-        <div class="left-side">
+        <div class="footer-left-side">
             <div class="footer-logo-section">
                 <img src="./assets/images/Logo.png" alt="" class="footer-logo">
                 <h1 class="logo-text">Trafalgar</h1>
@@ -184,7 +184,7 @@
                 for everyone</p>
             <p class="copyright">©Trafalgar PTY LTD 2020. All rights reserved</p>
         </div>
-        <div class="right-side">
+        <div class="footer-right-side">
         <div class="footer-navbar">
             <h3 class="footer-header">Company</h3>
             <ul class="nav">
