--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="section1-head">
             <h1>Our Services</h1>
             <div class="border"></div>
-            <p>We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo
+            <p>We provide to you the best choices for you. Adjust it to your health needs and make sure your undergo
                 treatment with our highly qualified doctors you can consult with us which type of service is suitable
                 for your health</p>
         </div>
@@ -213,6 +213,10 @@
             </ul>
         </div>
     </div>
+    <div class="author">
+    <h2>Author:</h2>
+    <p class="author-name">Alonge Daniel Oladele</p>
+</div>
     </footer>
 </body>
 
